--- a/index.html
+++ b/index.html
@@ -216,14 +216,24 @@
 <section class="rsvp">
   <h3>Қатысуыңызды растаңыз:</h3>
 
-  <!-- Embed Google Form -->
-  <div style="position: relative; width: 100%; max-width: 700px; margin: 0 auto; border-radius: 15px; overflow: hidden; box-shadow: 0 8px 25px rgba(0,0,0,0.3);">
+  <div style="
+      position: relative; 
+      width: 100%; 
+      max-width: 700px; 
+      margin: 0 auto; 
+      border-radius: 20px; 
+      overflow: hidden; 
+      box-shadow: 0 8px 25px rgba(0,0,0,0.3);
+      background: rgba(0,0,0,0.6); /* dark overlay behind iframe */
+      padding: 10px;
+  ">
     <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdQ1q-iIZ0JQlUizemLDUPp445q3t3ZdjcKglORGLi-9Cz09w/viewform?embedded=true"
-            width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">
+            width="100%" height="650" frameborder="0" marginheight="0" marginwidth="0">
       Жүктелуде…
     </iframe>
   </div>
 </section>
+
 
 
 
@@ -273,4 +283,5 @@
 
 </body>
 </html>
+
 
