--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Томирис & Ескендир — Тұсаукесер</title>
+ <h1>Томирис & Ескендир <br> Тұсаукесер</h1>
+
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:ital@0;1&family=Rubik:wght@300;500;700&display=swap" rel="stylesheet">
@@ -539,3 +540,4 @@
   </script>
 </body>
 </html>
+
