--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
- <h1>Томирис & Ескендир <br> Тұсаукесер</h1>
+ <h1> Ескендiр  & Томирис <br> Тұсаукесер</h1>
 
 
   <!-- Fonts -->
@@ -540,4 +540,5 @@
   </script>
 </body>
 </html>
+
 
