--- a/index.html
+++ b/index.html
@@ -205,7 +205,22 @@
     /* Google-form-like inputs (we switched to Formcarry backend as requested) */
     .rsvp form{ display:flex; flex-direction:column; gap:10px; align-items:center; }
     .rsvp input, .rsvp select{ width:92%; max-width:420px; padding:12px; border-radius:10px; border:1px solid rgba(6,25,30,0.06); font-size:15px; box-sizing:border-box; }
-    .radio-row{ display:flex; gap:8px; flex-wrap:wrap; justify-content:center; font-size:14px; color:#163743; }
+    .radio-row {
+  display: flex;
+  flex-direction: column; /* stack on mobile */
+  gap: 8px;
+  flex-wrap: wrap;
+  justify-content: center;
+  font-size: 14px;
+  color: #163743;
+}
+
+.radio-row label {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+
     .rsvp button{ background:linear-gradient(90deg,var(--accent-3),var(--accent)); color:#fff; border:none; padding:11px 18px; font-weight:600; border-radius:12px; cursor:pointer; box-shadow:0 8px 18px rgba(0,0,0,0.12); }
     .rsvp button:active{ transform:translateY(1px); box-shadow:0 6px 12px rgba(0,0,0,0.08); }
 
@@ -667,3 +682,4 @@
   <!-- END OF LENGTH PAD -->
 </body>
 </html>
+
