--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     .radio-row {
   display: flex;
   flex-direction: column; /* stack on mobile */
-  gap: 8px;
+  gap: 4px;
   flex-wrap: wrap;
   justify-content: center;
   font-size: 14px;
@@ -218,6 +218,7 @@
 .radio-row label {
   display: flex;
   align-items: center;
+  gap: 3px;
 }
 
     .rsvp button{ background:linear-gradient(90deg,var(--accent-3),var(--accent)); color:#fff; border:none; padding:11px 18px; font-weight:600; border-radius:12px; cursor:pointer; box-shadow:0 8px 18px rgba(0,0,0,0.12); }
@@ -299,6 +300,7 @@
 
     <!-- floating text -->
     <div class="floating-text">Тойдың тақырыбы - мұхит әлемi</div>
+    <div class="floating-text"> Мұхит әлемi</div>
     
 
     <!-- fish zone (3 fish) -->
@@ -681,5 +683,6 @@
   <!-- END OF LENGTH PAD -->
 </body>
 </html>
+
 
 
