--- a/index.html
+++ b/index.html
@@ -292,7 +292,11 @@
     <!-- header -->
     <header class="top" role="banner">
       <div class="twins-gif" aria-hidden="true"><img src="twins.gif" alt="twins"></div>
-      <h1>  Ескендiр & Томирис – Тұсаукесер</h1>
+      <h1>
+  Ескендiр & Томирис <br>
+  <span class="subtitle">Тұсаукесер</span>
+</h1>
+
       <h2 style="display:none">(optional subtitle)</h2>
     </header>
 
@@ -694,6 +698,7 @@
   <!-- END OF LENGTH PAD -->
 </body>
 </html>
+
 
 
 
