--- a/index.html
+++ b/index.html
@@ -103,6 +103,16 @@
       color: #00ffff;
       text-shadow: 0 0 8px rgba(0,255,255,0.6);
     }
+h1 {
+  text-align: center;       /* center both lines */
+  margin: 20px 0;
+}
+
+h1 .subtitle {
+  display: block;           /* forces onto new line */
+  font-size: 0.9em;         /* slightly smaller if you like */
+  font-weight: normal;      /* lighter style (optional) */
+}
 
     .fish-above-form {
     display: flex;
@@ -698,6 +708,7 @@
   <!-- END OF LENGTH PAD -->
 </body>
 </html>
+
 
 
 
