--- a/index.html
+++ b/index.html
@@ -351,11 +351,12 @@ h1 .subtitle {
         <h3 id="rsvpTitle">Құрметті ағайын-туыс & достар!</h3>
 
         <p class="body-text">
-          Сіздерді ұлымыз Ескендір мен қызымыз Томиристің тұсау кесер тойына шақырамыз.<br>
-          <strong>Өтетін күні:</strong> 15.11.2025 • <strong>Уақыты:</strong> 13:00<br>
-          <strong>Мекен-жайы:</strong> La Bella Hall, Atyrau<br>
-          Той иелері: Абзал &amp; Айнур
-        </p>
+        Сіздерді ұлымыз Ескендір мен қызымыз Томиристің тұсау кесер тойына шақырамыз.<br>
+        <strong>Өтетін күні:</strong> 15.11.2025 • <strong>Уақыты:</strong> 13:00<br>
+        <strong>Мекен-жайы:</strong> La Bella Hall, Atyrau<br>
+        <strong>Той иелері:</strong> Қалмұрат &amp; <u>Айнагүл</u><br>
+        Абзал &amp; Айнур
+      </p>
 
         <!-- MAP preview (click opens 2GIS) -->
         <div class="map-preview" aria-hidden="false">
@@ -708,6 +709,7 @@ h1 .subtitle {
   <!-- END OF LENGTH PAD -->
 </body>
 </html>
+
 
 
 
