--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       gap:12px; padding:16px; margin-bottom:12px;
       border-radius:18px;
       background:linear-gradient(135deg, #fff9f3 0%, #fff3d8 100%); /* warmer */
-      box-shadow:0 8px 22px rgba(3,16,26,0.18);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1); /* light, minimal shadow */
       animation:fadeInDown .7s ease both;
     }
     .twins-gif{ width:120px; height:120px; border-radius:999px; overflow:hidden; border:4px solid rgba(255,255,255,0.18); box-shadow:0 6px 20px rgba(0,0,0,0.18); }
@@ -78,7 +78,7 @@
       font-size:32px;
       color:var(--accent-3);
       /* stronger shadow to be readable on any bg */
-      text-shadow: 0 6px 18px rgba(0,0,0,0.65), 0 2px 6px rgba(255, 160, 180, 0.08);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1); /* light, minimal shadow */
     }
     header h2{ margin:0; font-family:"Playfair Display",serif; color:var(--accent-2); font-size:16px; letter-spacing:.6px; margin-top:4px; }
 
@@ -304,7 +304,7 @@ h1 .subtitle {
       <div class="twins-gif" aria-hidden="true"><img src="twins.gif" alt="twins"></div>
       <h1>
   Ескендiр & Томирис <br>
-  <span class="subtitle">Тұсаукесер</span>
+  <span class="subtitle"> 1 Жас & Тұсаукесер</span>
 </h1>
 
       <h2 style="display:none">(optional subtitle)</h2>
@@ -352,7 +352,7 @@ h1 .subtitle {
 
         <p class="body-text">
         Сіздерді ұлымыз Ескендір мен қызымыз Томиристің тұсау кесер тойына шақырамыз.<br>
-        <strong>Өтетін күні:</strong> 15.11.2025 • <strong>Уақыты:</strong> 13:00<br>
+        <strong>Өтетін күні:</strong> 15.11.2025 <br> <strong>Уақыты:</strong> 13:00<br>
         <strong>Мекен-жайы:</strong> La Bella Hall, Atyrau<br>
         <strong>Той иелері:</strong> Қалмұрат &amp; <u>Айнагүл</u><br>
         Абзал &amp; Айнур
@@ -709,6 +709,7 @@ h1 .subtitle {
   <!-- END OF LENGTH PAD -->
 </body>
 </html>
+
 
 
 
