--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@ h1 .subtitle {
   background-clip: text;
   -webkit-text-fill-color: transparent;
   text-shadow: 0 0 10px rgba(0, 200, 255, 0.5);
+  animation: floatAround 10s linear infinite, shimmer 4s ease-in-out infinite;
   white-space: nowrap;
   pointer-events: none;
 }
@@ -319,7 +320,7 @@ h1 .subtitle {
       <div class="twins-gif" aria-hidden="true"><img src="twins.gif" alt="twins"></div>
       <h1>
   Ескендiр & Томирис <br>
-  <span class="subtitle"> <strong> <u> 1 </u> </strong>Жас & Тұсаукесер</span>
+  <span class="subtitle"> Бір Жас & Тұсаукесер</span>
 </h1>
 
       <h2 style="display:none">(optional subtitle)</h2>
@@ -340,7 +341,7 @@ h1 .subtitle {
 
     <!-- floating text -->
     <div class="floating-text">Тойдың тақырыбы </div>
-    <div class="floating-text"> Мұхит әлемi</div>
+    <div class="floating-text1"> Мұхит әлемi</div>
     
 
     <!-- fish zone (3 fish) -->
@@ -724,6 +725,7 @@ h1 .subtitle {
   <!-- END OF LENGTH PAD -->
 </body>
 </html>
+
 
 
 
